[package]
name = "resonite-core"
description = "Rust implementations of Resonite formats"
authors = ["Vlams"]

version = "0.1.0"
edition = "2024"

readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vlams1/resonite-core"
categories = ["game-development", "encoding", "parsing"]
keywords = ["resonite", "AnimX", "AnimJ"]

include = [
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/*",
    "Cargo.toml",
]

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
metamatch = "0.3"